# rss-aggregator

./: README.md  example.py  feed_parsing_lib.py  pyproject.toml
files/: ignored_words.txt  rss_feeds.txt
html_documentation/: feed_parsing_lib.html
